--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,7 @@
 {{#each postArr}}
     <div class="row d-flex justify-content-center">
         <div class="col-10 post rounded my-4">
-            <h4>{{this.title}}</h4>
+            <h4>{{this.title}}<span class="post-owner">by {{this.user.username}} on {{this.posttime}}</span></h4>
             <p>{{this.content}}</p>
         </div>
     </div>
