sync localdata to JawsDb

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link href="./css/style.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./yard-bazaar-logos/yard-bazaar-black.png">
-    <title>Homepage</title>
+    <title>Yard Bazaar</title>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
         </div>
     </nav>
     <main>
-        <div class="container-fluid post-container mt-5 post"></div>
+        <div class="container-fluid post-container mt-5"></div>
         {{{body}}}
         </div>
     </main>
