--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,7 +2,7 @@
 {{#each postArr}}
     <div class="row d-flex justify-content-center">
         <div class="col-10 post rounded my-4">
-            <a href="/comment">{{this.title}}</a><span class="post-owner">by {{this.user.username}} on {{this.posttime}}</span>
+            <a class="title" href="/comment">{{this.title}}</a><span class="owner">by {{this.user.username}} on {{this.posttime}}</span>
             <p>{{this.content}}</p>
         </div>
     </div>
