--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg banner">
         <img class="logo" alt="yard-bazaar-logo" src="/yard-bazaar-logos/yard-bazaar-white.png">
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
                     <a class="nav-link text-white" href="/">Home <span class="sr-only">(current)</span></a>
@@ -23,9 +23,15 @@
                 <li class="nav-item">
                     <a class="nav-link text-white" href="#">Dashboard</a>
                 </li>
+                {{#if login}}
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/user/logout">Log out</a>
+                </li>
+                {{else}}
                 <li class="nav-item">
                     <a class="nav-link text-white" href="/user/login">Login</a>
                 </li>
+                {{/if}}
             </ul>
     </nav>
     <main>
