--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
                     <a class="nav-link text-white" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Dashboard</a>
+                    <a class="nav-link text-white" href="/user/dashboard">Dashboard</a>
                 </li>
                 {{#if login}}
                 <li class="nav-item">
