--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,25 +1,22 @@
 <div class="container-fluid mt-5">
     <div class="row d-flex flex-column justify-content-center align-items-center">
         <h1 class="text-center">Sign Up</h1>
-        <form class="col-5 login-container p-4 mt-5 rounded">
+        <form action="/user/register" method="post" class="col-5 login-container p-4 mt-5 rounded">
             <div class="form-group">
                 <label for="email">Email: </label>
-                <input type="email" class="form-control" id="email" required>
+                <input type="email" name="email" class="form-control" id="email" required>
             </div>
             <div class="form-group">
                 <label for="username">Username: </label>
-                <input type="text" class="form-control" id="username" required>
+                <input type="text" name="username" class="form-control" id="username" required>
             </div>
             <div class="form-group">
                 <label for="password">Password: </label>
-                <input type="password" class="form-control" id="password" required>
+                <input type="password" name="password" class="form-control" id="password" required>
             </div>
             <button id="submitbtn" type="submit" class="btn btn-primary">Submit</button>
             <a class="ml-2 font-weight-bold" href="/user/login">Login</a>
         </form>
     </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.6.1.min.js"
-    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 
-<script src="/script/register.js"></script>
