--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,10 +1,11 @@
 <div class="container-fluid post-container mt-5">
-{{#each postArr}}
+    {{#each postArr}}
     <div class="row d-flex justify-content-center">
         <div class="col-10 post rounded my-4">
-            <a class="title" href="/comment">{{this.title}}</a><span class="owner">by {{this.user.username}} on {{this.posttime}}</span>
+            <a class="title" href="/user/dashboard/{{this.id}}">{{this.title}}</a><span class="owner">by {{this.user.username}} on
+                {{this.posttime}}</span>
             <p>{{this.content}}</p>
         </div>
     </div>
-{{/each}}
+    {{/each}}
 </div>
