--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,8 @@
     --bg-banner: #283618;
     --border: #588157;
     --title: #000;
-    --bg-loginform: #a3b18a;
+    --bg-comment: #dcdcdc;
+
 }
 
 html {
@@ -24,7 +25,7 @@ p {
     height: 5rem;
 }
 
-/* -----------------homepage post styling----------------- */
+/* -----------------post styling----------------- */
 .post {
     border: 3px solid var(--border);
     padding: 1rem;
@@ -40,8 +41,23 @@ p {
     padding-left: 1rem;
 }
 
+/* -----------------comment styling----------------- */
+.comment-form{
+    background-color: #ccd5ae;
+}
+
+.comment-form label{
+    font-size: 1.2rem;
+}
+
+.comment{
+    background-color: var(--bg-comment);
+    padding: 0.5rem;
+}
+
 /*  -----------------login page styling ----------------- */
 .login-container {
     background-color: var(--bg-banner);
     color: #fff;
 }
+
