--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,13 +1,12 @@
-{{#if newpost}}
 <div class="d-flex justify-content-center mt-5">
     <a href="/api/post" class="border border-primary p-2">+ NEW POST</a>
 </div>
-{{/if}}
+
 <div class="container-fluid mt-5">
     {{#each postArr}}
     <div class="row d-flex justify-content-center">
         <div class="col-10 post rounded my-4">
-            <a class="title" href="/api/post/{{this.id}}">{{this.title}}</a><span class="owner">by
+            <a class="title" href="/user/dashboard/edit/{{this.id}}">{{this.title}}</a><span class="owner">by
                 {{this.user.username}} on {{this.posttime}}</span>
             <p>{{this.content}}</p>
         </div>
