add get /:id for to show all the comments for the post

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,7 +8,7 @@
     <div class="row d-flex justify-content-center">
         <div class="col-10 post rounded my-4">
             <a class="title" href="/api/post/{{this.id}}">{{this.title}}</a><span class="owner">by
-                {{this.user.username}} on {{this.posttime}}</span>
+                {{this.user.username}} on {{this.post_time}}</span>
             <p>{{this.content}}</p>
         </div>
     </div>
