--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,8 +1,8 @@
 <div class="container-fluid mt-5">
     <div class="row d-flex justify-content-center">
         <div class="col-10 post rounded my-4">
-            <a class="title" href="/user/dashboard/{{post.id}}">{{post.title}}</a>
-            <span class="owner">by {{post.user.username}} on {{post.posttime}} </span>
+            <a class="title" href="#">{{post.title}}</a>
+            <span class="owner">by {{post.user.username}} on {{post.post_time}} </span>
             <p>{{post.content}}</p>
         </div>
     </div>
@@ -19,7 +19,7 @@
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
         {{#each post.comments as |comment|}}
-        <p class="comment rounded mt-5">{{comment.content}} --by {{comment.user_id}} on {{post.commenttime}}</p>
+        <p class="comment rounded mt-5">{{comment.content}} --by {{comment.user.username}} on {{comment.comment_time}}</p>
         {{/each}}
     </div>
 </div>
