--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -4,16 +4,18 @@
             <form>
                 <div class="form-group">
                     <label for="title">Title: </label>
-                    <input type="text" name="title" class="form-control" id="email" value="{{post.title}}" required>
+                    <input type="text" name="title" class="form-control" id="title" value="{{post.title}}" required>
                 </div>
                 <div class="form-group">
                     <label for="content">Content: </label>
                     <textarea name="content" class="form-control" id="content">{{post.content}}</textarea>
                 </div>
-                <button type="button" class="btn btn-primary">SAVE</button>
+                <button type="button" class="btn btn-primary" id="update">UPDATE</button>
                 <button type="button" class="btn btn-danger" id="delete">DELETE</button>
             </form>
         </div>
     </div>
 </div>
-<script src="/script/edit-delete.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+<script src="/js/edit-delete.js"></script>
