click save button can add new post

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center mt-5">
-    <a href="/api/post" class="border border-primary p-2">+ NEW POST</a>
+    <a href="/api/post/newpost" class="border border-primary p-2">+ NEW POST</a>
 </div>
 
 <div class="container-fluid mt-5">
