--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -1,7 +1,7 @@
 <div class="container-fluid mt-5">
     <div class="row d-flex justify-content-center">
         <div class="col-10 rounded post my-4">
-            <form action="/api/post" method="post" class="p-4 mt-5 rounded">
+            <form action="/api/post" method="post" class="p-4 rounded">
                 <div class="form-group">
                     <label for="title">Title: </label>
                     <input type="text" name="title" class="form-control" id="title" required>
