--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link href="/css/style.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/yard-bazaar-logos/yard-bazaar-black.png">
-    <title>Yard Bazaar</title>
+    <link rel="icon" type="image/x-icon" href="/myblog-logos/myblog-logos.jpeg">
+    <title>MY BLOG</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg banner">
-        <img class="logo" alt="yard-bazaar-logo" src="/yard-bazaar-logos/yard-bazaar-white.png">
+        <img class="logo" alt="yard-bazaar-logo" src="/myblog-logos/myblog-logos_white.png">
         <div id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
