--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -17,4 +17,6 @@
     </div>
 </div>
 
+<script src="https://code.jquery.com/jquery-3.6.1.min.js"
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 <script src="/js/edit-delete.js"></script>
