--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg banner">
-        <img class="logo" alt="yard-bazaar-logo" src="/myblog-logos/myblog-logos_white.png">
+        <img class="logo" alt="my-blog-logo" src="/myblog-logos/myblog-logos_white.png">
         <div id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
